Removed padding of .band div to fix x overflow issue when graphs are generated [#168001063]

--- a/lara-plugin/tutorial/tutorial-format.css
+++ b/lara-plugin/tutorial/tutorial-format.css
@@ -3,8 +3,6 @@
 }
 
 .band {
-  padding-left: 5%;
-  padding-right: 5%;
   position: relative;
 }
 
